# competitive-coding

rust/: Cargo.toml  rustfmt.toml
rust/resources/: scratch.txt
rust/resources/advent_2023/: 25.txt
rust/resources/ioi_2019_1/: 0-01.in  0-01.out  0-02.in  1-01.in  1-02.in  2-01.in  2-02.in  2-03.in  2-05.in  2-06.in  2-07.in  2-08.in  2-08.out  2-10.in  2-10.out  2-11.in  2-12.in  2-13.in  2-13.out  2-14.in  2-14.out  2-15.in  2-16.in  2-16.out  2-17.in  2-18.in  2-19.in  2-19.out  2-20.in  2-20.out  2-21.in  2-22.in  2-22.out  2-23.in  2-23.out  2-24.in  2-25.in  2-26.in  2-26.out  2-27.in  (+128 more)
rust/src/: main.rs
rust/src/advent_of_code_2020/: advent_2020_1.rs  advent_2020_2.rs  advent_2020_3.rs  advent_2020_4.rs  advent_2020_7.rs  base.rs  mod.rs
rust/src/advent_of_code_2021/: advent_2021_1.rs  advent_2021_10.rs  advent_2021_11.rs  advent_2021_12.rs  advent_2021_13.rs  advent_2021_14.rs  advent_2021_15.rs  advent_2021_16.rs  advent_2021_17.rs  advent_2021_18.rs  advent_2021_19.rs  advent_2021_2.rs  advent_2021_20.rs  advent_2021_21.rs  advent_2021_22.rs  advent_2021_23.rs  advent_2021_24.rs  advent_2021_25.rs  advent_2021_3.rs  advent_2021_4.rs  advent_2021_5.rs  advent_2021_6.rs  advent_2021_7.rs  advent_2021_8.rs  advent_2021_9.rs  mod.rs
rust/src/advent_of_code_2022/: advent_2022_1.rs  advent_2022_10.rs  advent_2022_11.rs  advent_2022_12.rs  advent_2022_13.rs  advent_2022_14.rs  advent_2022_15.rs  advent_2022_16.rs  advent_2022_17.rs  advent_2022_18.rs  advent_2022_19.rs  advent_2022_2.rs  advent_2022_20.rs  advent_2022_21.rs  advent_2022_22.rs  advent_2022_23.rs  advent_2022_24.rs  advent_2022_25.rs  advent_2022_3.rs  advent_2022_4.rs  mod.rs  (+6 more)
(+70 files in other folders)
