[package]
name = "solver"
version = "0.1.0"
authors = ["Gábor Gyebnár <korteur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
permutator = "*"
fraction = "*"
primal = "^0.3.0"
sudoku = "0.7.0"
num-bigint = "0.3"
