[package]
name = "solver"
version = "0.1.0"
authors = ["Gábor Gyebnár <korteur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
permutator = "*"
fraction = "*"
primal = "^0.3.0"
sudoku = "0.7.0"
num-bigint = "0.3"
regex = "1"
serde_json = "1.0.68"
anyhow = "1.0.44"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.4", features = ["json", "serde_json"] }